--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -1010,7 +1010,7 @@ Moving forward, WP4.5 will develop a detailed exploitation roadmap to secure the
 \item Exploitation: Initial Table of Exploitable Results submitted (M6), with 20 identified results covering software, workflows, and training resources.
 \item The 2025 SIAM/ACM Prize in Computational Science and Engineering was awarded to the principal authors (among whom are dealii-X PCs M. Kronbichler and L. Heltai) of the deal.II Project in recognition of their contributions to finite element calculations.
 \item deal.II was presented by the dealii-X consortium as the “Code of the Month” by CASTIEL2, highlighting its impact and relevance within the European HPC ecosystem. 
-\item Dissemination: Strong presence at international conferences and workshops, including SIAM CSE 2025, Coupled Problems 2025, Large-Scale Scientific Computations (LSSC 2025), Domain Decomposition Methods (DD29), and ICOSAHOM 2025, among others.
+\item Dissemination: Strong presence at international conferences and workshops, including SIAM CSE 2025, Coupled Problems 2025, Large-Scale Scientific Computations (LSSC 2025), Domain Decomposition Methods (DD29), ICOSAHOM 2025, and ENUMATH 2025, among others.
 \end{itemize}
 
 
