add deal.ii 9.7 preprint

--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -138,7 +138,7 @@
 	
 	\subsubsection*{New deal.II release and enhancement of dealii-X building blocks}
 	
-	The 9.7 release of deal.II has introduced several improvements directly aligned
+	The 9.7 release of deal.II~\cite{deal.II.9.7} has introduced several improvements directly aligned
 	with WP1.1 on GPU-enabled matrix-free solvers and exascale readiness.  
 	Key advances concern the matrix-free infrastructure, which was extended with:
 	
@@ -173,6 +173,10 @@
 	made in the past few months. These contributions are described in more detail,
 	along with an extensive evaluation of performance, in the report on
 	deliverable D3.2: ``Co-Design and Efficiency Report I''.
+	
+	\begin{thebibliography}{10}
+		\bibitem{deal.II.9.7} D. Arndt et al. ``The deal.II Library, Version 9.7'', \emph{Preprint}, 2025. \url{https://dealii.org/deal97-preprint.pdf}
+	\end{thebibliography}
 	
 	
 	\subsubsection*{WP1.1: Extending and improving the exascale capabilities in deal.II} % (M1–M22, Lead: RUB)}
