--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -576,8 +576,13 @@ In accordance with our goal of simulating the elastodynamic processes in the ver
 Parallel to our work on using the alveolar geometry for ExaDG simulations, we have also been evaluating the applicability and implementing the enhanced-surface finite element formulation for the surfactant, which we had reported in deliverables D2.1 and D2.2. We expect this formulation to be incorporated into ExaDG in the very short term.
 
 \begin{thebibliography}{10}
+	\bibitem{bosnjak2025Synthaorta} D. Bošnjak, G. M. Melito, R. Schussnig, K. Ellermann, and T.-P.Fries.: ``SynthAorta: A 3D Mesh Dataset of Parametrized Physiological Healthy Aortas''. \emph{IEEE Transactions on Medical Imaging},
+	\href{https://doi.org/10.1109/TMI.2025.3599937}{https://doi.org/10.1109/TMI.2025.3599937}, [in press].
+	%
+	\bibitem{schussnig2025genNewtonian} R. Schussnig, N. Fehn, D. R. Q. Pacheco, and M. Kronbichler.: ``Higher-Oder Splitting Schemes for Fluids with Variable Viscosity''. \emph{arXiv Preprint}, 2025, \href{https://doi.org/10.48550/arXiv.2506.14424}{arXiv:2506.14424}.
+	%
 \bibitem{schussnig2025matrixfree} R. Schussnig, N. Fehn, P. Munch, and M. Kronbichler.: ``Matrix-free higher-order finite element methods for hyperelasticity''. \emph{Computer Methods in Applied Mechanics and Engineering}, 2025, 435,
-pp.1-23. \href{https://doi.org/10.1016/j.cma.2024.117600}{doi:10.1016/j.cma.2024.117600}
+pp.1-23, \href{https://doi.org/10.1016/j.cma.2024.117600}{doi:10.1016/j.cma.2024.117600}.
 \end{thebibliography}
 
 \subsubsection*{WP2.2 Heart: Exascale Simulations in Cardiac Computational Medicine}
